# zeldhash-miner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  todo.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  clippy.yml  fmt.yml  release.yml  tests.yml
crates/core/: Cargo.toml  README.md
crates/core/src/: address.rs  cbor.rs  error.rs  fees.rs  hash.rs  lib.rs  miner.rs  nonce.rs  psbt.rs  tx.rs
crates/gpu/: Cargo.toml  README.md  build.rs
crates/gpu/examples/: bench.rs
crates/gpu/src/: lib.rs  shader.wgsl
crates/kernel/: Cargo.toml  build.rs
crates/kernel/src/: lib.rs
crates/python-core/: Cargo.toml  README.md
crates/python-core/src/: lib.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
docs/: ARCHITECTURE.md  INTEGRATION.md  RELEASING.md
examples/web-demo/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/web-demo/public/wasm/: zeldhash_miner_wasm.js  zeldhash_miner_wasm_bg.wasm
examples/web-demo/src/: main.ts  polyfills.ts  style.css  worker.ts
facades/rust/: Cargo.toml  README.md
facades/rust/src/: lib.rs
facades/typescript/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
facades/typescript/src/: builder.test.ts  builder.ts  coordinator.test.ts  coordinator.ts  errors.ts  index.test.ts  index.ts  nonce.test.ts  nonce.ts  psbt.test.ts  types.ts  wasm-bindings.d.ts  wasm.ts  worker.ts
facades/typescript/src/__fixtures__/: mainnetRealCase.ts
facades/typescript/wasm/: package.json  zeldhash_miner_wasm.d.ts  zeldhash_miner_wasm.js  zeldhash_miner_wasm_bg.wasm  zeldhash_miner_wasm_bg.wasm.d.ts
scripts/: build-all.sh  build-wasm.sh  release-crate.sh  release-npm.sh
