[package]
name = "zeldhash-miner-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
# std toggles standard library usage; thiserror works in core-only mode too.
std = []

[dependencies]
sha2 = { version = "0.10", default-features = false }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0.69", default-features = false }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }

[dev-dependencies]
bitcoin = "0.32"

