[package]
name = "zeldhash-miner-python-core"
version = "0.3.0"
edition = "2021"
authors = ["Ouziel Slama <ouziel@gmail.com>"]
license = "MIT"
homepage = "https://zeldhash.com"
publish = false

[dependencies]
zeldhash-miner-core = { workspace = true }
zeldhash-miner-gpu = { workspace = true, optional = true }

[features]
default = ["cpu"]
cpu = []
gpu = ["zeldhash-miner-gpu"]

