[package]
name = "zeldhash-miner-wasm"
version = "0.2.3"
edition = "2021"
authors = ["Ouziel Slama <ouziel@gmail.com>"]
license = "MIT"
description = "WASM bindings for the Zeldhash miner with optional WebGPU acceleration"
repository = "https://github.com/zeldhash/zeldhash-miner"
homepage = "https://github.com/zeldhash/zeldhash-miner"
keywords = ["bitcoin", "mining", "wasm", "webgpu"]
categories = ["cryptography", "cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zeldhash-miner-core = { workspace = true }
zeldhash-miner-gpu = { workspace = true, optional = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
hex = "0.4"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
bitcoin = { version = "0.32.4", features = ["base64", "std"] }

[features]
default = ["cpu", "gpu"]
cpu = []
gpu = ["zeldhash-miner-gpu"]

