[package]
name = "zeldhash-miner"
version = "0.2.0"
edition = "2021"
authors = ["Ouziel Slama <ouziel@gmail.com>"]
description = "High-level CPU/WebGPU miner for vanity Bitcoin transaction IDs"
license = "MIT"
repository = "https://github.com/zeldhash/zeldhash-miner"
homepage = "https://github.com/zeldhash/zeldhash-miner"
documentation = "https://docs.rs/zeldhash-miner"
readme = "README.md"
keywords = ["bitcoin", "mining", "wasm", "gpu", "zeldhash"]
categories = ["cryptography", "cryptography::cryptocurrencies"]

[dependencies]
hex = { workspace = true }
pollster = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
zeldhash-miner-core = { workspace = true }
zeldhash-miner-gpu = { workspace = true, optional = true }

[dev-dependencies]
bitcoin = { workspace = true }

[features]
default = ["cpu", "gpu", "rayon", "serde"]
cpu = []
gpu = ["zeldhash-miner-gpu", "pollster"]
rayon = ["dep:rayon"]
serde = ["dep:serde"]

